objects/InstallationObj__c.object
<CustomObject>
    <fields>
        <fullName>InstallationAccess__c</fullName>
        <label>InstallationAccess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Write</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstallationType__c</fullName>
        <label>InstallationType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PickListReadOnly__c</fullName>
        <label>PickListReadOnly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unable to select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklIstField2__c</fullName>
        <label>PicklIstField2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklIstFieldAlll4343434__c</fullName>
        <label>PicklIstFieldAlll4343434</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>safaf</fullName>
                </value>
                <value>
                    <fullName>asdff</fullName>
                </value>
                <value>
                    <fullName>sadfsa</fullName>
                </value>
                <value>
                    <fullName>ffsaf</fullName>
                </value>
                <value>
                    <fullName>asfsadf</fullName>
                </value>
                <value>
                    <fullName>asfdaffsad</fullName>
                </value>
                <value>
                    <fullName>asfffsad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>